# web_modul_8

./: README.md  pyproject.toml
MongoDB/: authors.json  connect.py  main.py  models.py  seeds.py
RabbitMQ/: config.ini  consumer.py  models.py  producer.py
